syntax = "proto3";
option csharp_namespace = "Common";

option java_package = "catgirl.kirara.moe";


// Name: LIEELECPDPF
message AbilityInvokeEntryHead {
    uint32 server_buff_uid = 10;
    int32 local_id = 1;
    bool is_serverbuff_modifier = 3;
    uint32 instanced_modifier_id = 11;
    uint32 target_id = 4;
    uint32 instanced_ability_id = 6;
    int32 modifier_config_local_id = 12;
}

