syntax = "proto3";
option csharp_namespace = "Common.Protobuf";

option java_package = "catgirl.kirara.moe";

import "AbilityAppliedAbility.proto";

// Name: JOAGDFOJABP
message AbilityMetaAddAbility {
    AbilityAppliedAbility ability = 1;
}

