syntax = "proto3";
option csharp_namespace = "Common.Protobuf";

option java_package = "catgirl.kirara.moe";

import "AnimatorParameterValueInfoPair.proto";

// Name: BGGGDNNJKOE
message AbilityMetaSetPoseParameter {
    AnimatorParameterValueInfoPair value = 2;
}

