syntax = "proto3";

import "AbilityScalarType.proto";
import "AbilityString.proto";

option csharp_namespace = "Common.Protobuf";

message AbilityScalarValueEntry {
	AbilityString key = 1;
	AbilityScalarType value_type = 2;
	oneof value {
		float float_value = 3;
		string string_value = 4;
		int32 int_value = 5;
		uint32 uint_value = 6;
	}
}
